option('build_threadpool_shared_libs', type: 'boolean', value: true, description: 'Build ThreadPool as a shared library')
option('build_threadpool_example', type: 'boolean', value: false, description: 'Build ThreadPool example')
option('build_threadpool_tests', type: 'boolean', value: false, description: 'Build ThreadPool tests')
option('build_threadpool_benchmark', type: 'boolean', value: false, description: 'Build ThreadPool benchmarks')